Update all of the project to include most changes
Fixed anchors in generic buttons to cover the whole of available space.
Added more service windows in the services page.
Added projects page and css.
Added new images.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="nav_List">
                     <li class="nav_Link"><a href="index.html">Home</a></li>
                     <li class="nav_Link"><a href="pages/about.html">About Us</a></li>
-                    <li class="nav_Link"><a href="pages/">Products</a></li>
+                    <li class="nav_Link"><a href="pages/projects.html">Products</a></li>
                     <li class="nav_Link"><a href="pages/services.html">Services</a></li>
                 </ul>
             </nav>
@@ -30,7 +30,7 @@
                 <p class="slogan">We make your dream home, your real home!</p>
                 <div class="intro_Description">
                     <p>Explore a wide range of professional and personal development courses. Gain the skills you need to succeed in your career and thrive in life. Start learning today!</p>
-                    <button class="generic_Button">Read More</button>
+                    <button class="generic_Button"><a href="pages/about.html">Read More</a></button>
                 </div>
              </div>
              <div class="intro_Right">
