--- a/pages/about.html
+++ b/pages/about.html
@@ -36,14 +36,14 @@
         </div>
         <div class="about_Local_Nav">
             <ul>
-                <li class="subject_Link"><a href="">Who We Are</a></li>
-                <li class="subject_Link"><a href="">Why Choose Us</a></li>
-                <li class="subject_Link"><a href="">How To Get Started</a></li>
-                <li class="subject_Link"><a href="">FAQ</a></li>
+                <li class="subject_Link"><a href="#about_Wwr">Who We Are</a></li>
+                <li class="subject_Link"><a href="#about_Why_Us">Why Choose Us</a></li>
+                <li class="subject_Link"><a href="#about_How_To_Start">How To Get Started</a></li>
+                <li class="subject_Link"><a href="#about_Faq">FAQ</a></li>
             </ul>
         </div>
 
-        <section class="who_We_Are">
+        <section class="who_We_Are" id="about_Wwr">
             <div class="wwa_Intro">
                 <div class="wwa_Img_Wrapper">
                     <img src="https://thumbs.dreamstime.com/b/construction-team-business-man-engineer-architect-brainstorming-working-table-building-plan-195716147.jpg" 
@@ -97,7 +97,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat.
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat.
                         </p>
-                        <button class="generic_Button">Explore All Services</button>
+                        <button class="generic_Button"><a href="services.html">Explore All Services</a></button>
                     </div>
                     <div class="service_Selection">
                         <!-- Service Container Start -->
@@ -199,14 +199,39 @@
                 </div>
                 <div class="values_List">
                     <div class="value_Container">
-
+                        <div class="value_Img_Cont">
+                            <img src="../Images/Webpage/directory-love-favorite-1616-svgrepo-com.svg" 
+                            class="value_Image" alt="" height="80" width="auto">
+                        </div>
+                        <p>Value #1</p>
+                    </div>
+                    <div class="value_Container">
+                        <div class="value_Img_Cont">
+                            <img src="../Images/Webpage/directory-love-favorite-1616-svgrepo-com.svg" 
+                            class="value_Image" alt="" height="80" width="auto">
+                        </div>
+                        <p>Value #2</p>
+                    </div>
+                    <div class="value_Container">
+                        <div class="value_Img_Cont">
+                            <img src="../Images/Webpage/directory-love-favorite-1616-svgrepo-com.svg" 
+                            class="value_Image" alt="" height="80" width="auto">
+                        </div>
+                        <p>Value #3</p>
+                    </div>
+                    <div class="value_Container">
+                        <div class="value_Img_Cont">
+                            <img src="../Images/Webpage/directory-love-favorite-1616-svgrepo-com.svg" 
+                            class="value_Image" alt="" height="80" width="auto">
+                        </div>
+                        <p>Value #4</p>
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <section class="why_Choose_Us_Section">
+        <section class="why_Choose_Us_Section" id="about_Why_Us">
             <h2>Why Choose Us</h2>
             <div class="why_Choose_Container">
                 <div class="backdrop_Styling">
@@ -316,7 +341,7 @@
             </div>
         </section>
 
-        <section class="getting_Started">
+        <section class="getting_Started" id="about_How_To_Start">
             <div class="how_To_Start">
                 <h2>Getting Started</h2>
                 <p>
@@ -389,7 +414,7 @@
             </div>
         </section>
 
-        <section class="faq_Section">
+        <section class="faq_Section" id="about_Faq">
             <h2>FAQ</h2>
             <div class="accordion_Container">
                 <div class="subtopic">
