--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/contact.css">
     <link rel="stylesheet" href="../styles/accordion.css">
+    <link rel="stylesheet" href="../styles/animations.css">
     <title>Contact Us</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <ul class="nav_List">
                     <li class="nav_Link"><a href="../index.html">Home</a></li>
                     <li class="nav_Link"><a href="../pages/about.html">About Us</a></li>
-                    <li class="nav_Link"><a href="../pages/">Products</a></li>
+                    <li class="nav_Link"><a href="../pages/projects.html">Products</a></li>
                     <li class="nav_Link"><a href="../pages/services.html">Services</a></li>
                 </ul>
             </nav>
@@ -41,7 +42,12 @@
                         </div>
                         <div class="contact_Desc_Wrapper">
                             <h2 class="contact_Title">Call Us</h2>
-                            <p class="contact_desc">Yap Yap Yap</p>
+                            <p class="contact_desc">Contact us for prompt and reliable service.</p>
+                            <div class="learn_More_Container">
+                                <div class="box-Left"></div>
+                                <a href="tel:+14155550132" class="learn_More_Page">+1 (415) 555‑0132</a>
+                                <div class="arrow-Right"></div>
+                            </div>
                         </div>
                     </div>
 
@@ -52,7 +58,12 @@
                         </div>
                         <div class="contact_Desc_Wrapper">
                             <h2 class="contact_Title">Email Us</h2>
-                            <p class="contact_desc">Yap Yap Yap</p>
+                            <p class="contact_desc">Contact us for expert property management solutions and inquiries.</p>
+                            <div class="learn_More_Container">
+                                <div class="box-Left"></div>
+                                <a href="mailto:jim@example.com" class="learn_More_Page">jim@example.com</a>
+                                <div class="arrow-Right"></div>
+                            </div>
                         </div>
                     </div>
                     
@@ -63,7 +74,12 @@
                         </div>
                         <div class="contact_Desc_Wrapper">
                             <h2 class="contact_Title">Visit Our Office</h2>
-                            <p class="contact_desc">Yap Yap Yap</p>
+                            <p class="contact_desc">Get an in depth, face to face answers to your questions.</p>
+                            <div class="learn_More_Container">
+                                <div class="box-Left"></div>
+                                <a href="" class="learn_More_Page">Learn More</a>
+                                <div class="arrow-Right"></div>
+                            </div>     
                         </div>
                     </div>
                 </div>
