Correct navigation links and disable partners page
as titile implies.

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -33,7 +33,7 @@
                         <li class="nav_Link"><a href="../index.html">Home</a></li>
                         <li class="nav_Link"><a href="../pages/projects.html">Projects</a></li>
                         <li class="nav_Link"><a href="../pages/services.html">Services</a></li>
-                        <li class="nav_Link"><a href="../pages/about.html">Partners</a></li>
+                        <li class="nav_Link"><a href="">Partners</a></li>
                         <li class="nav_Link"><a href="../pages/faq.html">FAQ</a></li>
                     </ul>
                 </nav>
@@ -318,18 +318,20 @@
             <div class="footer_Column">
                 <h4>Contact</h4>
                 <address>
-                    <p class="description_Footer"><div class="footer_Icon_One"></div> Some Street Address</p>
-                    <p class="description_Footer"><div class="footer_Icon_Two"></div> Phone: <span><a href="tel:+14155550132">+1 (415) 555‑0132</a></span></p>
-                    <p class="description_Footer"><div class="footer_Icon_Three"></div> Email: <span><a href="mailto:jim@example.com">jim@example.com</a></span></p>
+                    <p class="description_Footer"><div class="footer_Icon_One"></div> Tbilisi, Takaishvili st. 3</p>
+                    <p class="description_Footer"><div class="footer_Icon_Two"></div> Phone: <span><a href="tel:+995599203120">+995 599 203 120</a></span></p>
+                    <p class="description_Footer"><div class="footer_Icon_Three"></div> Email: <span><a href="mailto:thespace@thespacerenovations.com">thespace@thespacerenovations.com</a></span></p>
                 </address>
             </div>
             <div class="footer_Column">
                 <h4>Links</h4>
                 <ul>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href=""></a></li>
+                    <li class="nav_Link"><a href="../index.html">Home</a></li>
+                        <li class="nav_Link"><a href="../pages/projects.html">Projects</a></li>
+                        <li class="nav_Link"><a href="../pages/services.html">Services</a></li>
+                        <li class="nav_Link"><a href="">Partners</a></li>
+                        <li class="nav_Link"><a href="../pages/faq.html">FAQ</a></li>
+                        <li class="nav_Link"><a href="../pages/contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer_Column">
