--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
                             <p class="contact_desc">Contact us for prompt and reliable service.</p>
                             <div class="learn_More_Container">
                                 <div class="box-Left"></div>
-                                <a href="tel:+14155550132" class="learn_More_Page">+1 (415) 555‑0132</a>
+                                <a href="tel:+995599203120" class="learn_More_Page">+995 599 203 120</a>
                                 <div class="arrow-Right"></div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                             <p class="contact_desc">Contact us for expert property management solutions and inquiries.</p>
                             <div class="learn_More_Container">
                                 <div class="box-Left"></div>
-                                <a href="mailto:jim@example.com" class="learn_More_Page">jim@example.com</a>
+                                <a href="mailto:thespace@thespacerenovations.com" class="learn_More_Page">Email Us</a>
                                 <div class="arrow-Right"></div>
                             </div>
                         </div>
