Replace manual color & txt inputs with global vars
Replaced all the hand coded color values with easily adjustible global
variables. Same for font-family rules in css. Also removes the scroll
from the services selection in the about css file and makes it display
the whole list.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top_Panel">
 
             <div class="logo_And_Hamburger">
-                <img class="header_Logo" src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA" 
+                <img class="header_Logo" src="Images/theSpace/logo-tetri).png" 
                 alt="The Space Renovations Logo" width="90px">
 
                 <div class="navbarToggleBtn">
@@ -31,8 +31,8 @@
                 <nav class="global_Nav">
                     <ul class="nav_List">
                         <li class="nav_Link"><a href="index.html">Home</a></li>
-                        <li class="nav_Link"><a href="pages/projects.html">Projects</a></li>
                         <li class="nav_Link"><a href="pages/services.html">Services</a></li>
+                        <li class="nav_Link"><a href="pages/projects.html">Projects</a></li>
                         <li class="nav_Link"><a href="">Partners</a></li>
                         <li class="nav_Link"><a href="pages/faq.html">FAQ</a></li>
                     </ul>
@@ -52,9 +52,9 @@
                     <!-- <img src="" alt="" class="company_Image"> -->
                     <div class="intro_Left">
                         <h1 class="main_Title"><span id="tsr_Text">The Space Renovations</span></h1>
-                        <p class="slogan">We make your dream home, your real home!</p>
+                        <p class="slogan">One Place. Endless Solutions</p>
                         <div class="intro_Description">
-                            <p>Explore a wide range of professional and personal development courses. Gain the skills you need to succeed in your career and thrive in life. Start learning today!</p>
+                            <p>From renovation to landscaping to property management — we provide expert-led, end-to-end services that transform your space and your peace of mind</p>
                             <button class="generic_Button"><a href="pages/about.html">Read More</a></button>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             <div class="mini_Description">
                                 <h3>Our Mission</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat. 
+                                    At The Space, we transform ideas into beautifully crafted environments 
                                 </p>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                             <div class="mini_Description">
                                 <h3>Our Vision</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a gravida nunc. Morbi molestie fermentum feugiat. 
+                                    We don't just renovate spaces — we create places that feel right. 
                                 </p>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                 
             </div>
 
-            <div class="core_Values">
+            <!-- <div class="core_Values">
                 <div class="values_Preface">
                     <h3>Our Values</h3>
                     <p>
@@ -261,7 +261,7 @@
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </section>
 
         <section class="why_Choose_Us_Section" id="about_Why_Us">
@@ -440,7 +440,7 @@
                     <div class="conclusion_Desc_Positioner">
                         <div class="conc_Desc_Container">
                             <h3>Ready to start your project? <br>Get a quote for free!</h3>
-                            <button class="generic_Button"><a href="contact.html" style="text-decoration: inherit; color: inherit;">Contact Us</a></button>
+                            <button class="generic_Button"><a href="contact.html">Contact Us</a></button>
                         </div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
     <footer>
         <div class="footer_Div">
             <div class="footer_Column">
-                <img src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA"
+                <img src="Images/theSpace/logo-tetri).png"
                  alt="Company Logo" class="footer_Logo" width="50px">
                 <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 <a href="">Our Team</a>
