--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="top_Panel">
-            <img class="header_Logo" src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA" 
+            <img class="header_Logo" src="../Images/theSpace/logo-tetri).png" 
             alt="The Space Renovations Logo" width="90px">
             <nav class="global_Nav">
                 <ul class="nav_List">
