--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,7 @@
         <div class="top_Panel">
 
             <div class="logo_And_Hamburger">
-                <img class="header_Logo" src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA" 
+                <img class="header_Logo" src="../Images/theSpace/logo-tetri).png" 
                 alt="The Space Renovations Logo" width="90px">
 
                 <div class="navbarToggleBtn">
@@ -30,8 +30,8 @@
                 <nav class="global_Nav">
                     <ul class="nav_List">
                         <li class="nav_Link"><a href="../index.html">Home</a></li>
-                        <li class="nav_Link"><a href="../pages/projects.html">Projects</a></li>
                         <li class="nav_Link"><a href="../pages/services.html">Services</a></li>
+                        <li class="nav_Link"><a href="../pages/projects.html">Projects</a></li>
                         <li class="nav_Link"><a href="">Partners</a></li>
                         <li class="nav_Link"><a href="../pages/faq.html">FAQ</a></li>
                     </ul>
@@ -201,7 +201,7 @@
     <footer>
         <div class="footer_Div">
             <div class="footer_Column">
-                <img src="https://imgs.search.brave.com/twBPsG6XksKU00jO-wNEYEeFnljSamzmzMjWP19bhSc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9keW5h/bWljLmRlc2lnbi5j/b20vYXNzZXQvbG9n/by8wZDI1ODU2Ny0y/MzM0LTQ4MTEtOTRm/Zi0wOGY3NzhkNTli/YzcvbG9nby1zZWFy/Y2gtZ3JpZC0xeD9s/b2dvVGVtcGxhdGVW/ZXJzaW9uPTEmdj02/Mzg1MTE4NDAyOTE1/MDAwMDA"
+                <img src="../Images/theSpace/logo-tetri).png"
                  alt="Company Logo" class="footer_Logo" width="50px">
                 <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 <a href="">Our Team</a>
