Change the color pallete to natural brwn crm grn
Changes the color pallete of the entire website to a more natural
selection.

--- a/index.html
+++ b/index.html
@@ -449,12 +449,13 @@
     </main>
     <footer>
         <div class="footer_Div">
-            <div class="footer_Column">
-                <img src="Images/theSpace/logo-tetri).png"
+            <img src="Images/theSpace/logo-tetri).png"
                  alt="Company Logo" class="footer_Logo" width="50px">
+            <!-- <div class="footer_Column">
+                
                 <p class="description_Footer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 <a href="">Our Team</a>
-            </div>
+            </div> -->
             <div class="footer_Column">
                 <h4>Contact</h4>
                 <address>
